[#21318] Keycard - Allow user to initiate Profile key pair migration on an empty Keycard (#21359)

--- a/translations/en.json
+++ b/translations/en.json
@@ -274,6 +274,7 @@
   "buy-crypto-title": "Looks like your wallet is empty",
   "buy-eth": "Buy ETH",
   "buy-ethereum": "Buy Ethereum",
+  "buy-keycard": "Buy Keycard",
   "by-continuing-you-accept": "By continuing you accept our ",
   "camera-access-error": "To grant the required camera permission, please go to your system settings and make sure that Status > Camera is selected.",
   "camera-permission-denied": "Permission denied",
@@ -362,6 +363,7 @@
   "check-before-syncing-doc-checkbox-2": "Make sure you are logged in on the other device",
   "check-before-syncing-doc-checkbox-3": "Disable the firewall and VPN on your devices",
   "check-before-syncing-doc-description": "To sync your devices successfully, make sure to check and complete these steps:",
+  "check-keycard": "Check your Keycard",
   "check-on-block-explorer": "Check on block explorer",
   "check-on-opensea": "Check on opensea",
   "check-other-device-for-pairing": "Check your other device for a pairing request.",
@@ -470,6 +472,7 @@
   "connect-with-users": "Connect with users",
   "connected": "Connected",
   "connected-dapps": "Connected dApps",
+  "connected-dont-move": "Connected. Don’t move your card.",
   "connected-peers": "Connected and discovered peers",
   "connected-to": "Connected to",
   "connecting": "Connecting...",
@@ -827,6 +830,7 @@
   "emojihash-description": "A visual representation of your chat key. It will help other users recognize your profile.",
   "emojis": "Emojis",
   "empty-activity-center": "Your chat notifications\nwill appear here",
+  "empty-card-info": "To generate new key pair, or import existent non-profile keys to the Keycard, please use the Status desktop app. If you'd like these features on mobile, feel free to upvote them and discuss them in Status community.",
   "empty-chat-description": "There are no messages \nin this chat yet",
   "empty-chat-description-community": "It's been quiet here for the last {{quiet-hours}}.",
   "empty-chat-description-one-to-one": "Any messages you send here are encrypted and can only be read by you and ",
@@ -1073,6 +1077,7 @@
   "generating-mnemonic": "Generating seed phrase",
   "generic-error": "Error: {{generic-error}}",
   "get-a-keycard": "Get a Keycard",
+  "get-keycard": "Get Keycard",
   "get-started": "Get started",
   "get-status-at": "Get Status at http://status.im",
   "get-stickers": "Get Stickers",
@@ -1132,6 +1137,7 @@
   "history-nodes": "Status nodes",
   "hit-photos-limit": "You can only add {{max-photos}} photos to your message",
   "hold-card": "Hold card to the back\n of your phone",
+  "hold-phone-near-keycard": "Hold your phone near a Status Keycard",
   "hold-to-post-1": "Hold",
   "hold-to-post-2": "to post",
   "home": "Home",
@@ -1167,10 +1173,12 @@
   "import-community-title": "Import a community",
   "import-from-keycard": "Import from Keycard",
   "import-key-pair": "Import key pair",
+  "import-key-pair-keycard": "Import profile key pair to Keycard",
   "import-keypair-steps": "{{account-name}} was derived from your {{keypair-name}} key pair, which has not yet been imported to this device. To transact using this account, you will need to import the {{keypair-name}} key pair first.",
   "import-keypair-to-use-account": "Import key pair to use this account",
   "import-private-key": "Import private key",
   "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
+  "import-profile-key-pair": "Import profile key pair",
   "import-to-use-derived-accounts": "Import to use derived accounts",
   "import-using-phrase": "Import using recovery phrase",
   "in": "in",
@@ -1295,6 +1303,7 @@
   "jump-to": "Jump to",
   "jun": "Jun",
   "K": "K",
+  "keep-card-steady": "Keep the card steady under the phone",
   "keep-key": "KeepKey",
   "key": "Key",
   "key-managment": "Key management",
@@ -1324,6 +1333,7 @@
   "keycard-connected-title": "Connected",
   "keycard-desc": "Own a Keycard? Store your keys on it; you’ll need it for transactions",
   "keycard-dont-ask-card": "Don't ask for card to sign in",
+  "keycard-empty": "Keycard is empty",
   "keycard-enter-new-passcode": "Enter new passcode {{step}}/2",
   "keycard-error-description": "Connect the card again to continue",
   "keycard-error-title": "Connection lost",
@@ -1478,6 +1488,7 @@
   "make-admin": "Make admin",
   "make-moderator": "Make moderator",
   "make-one-it-is-easy-we-promise": "Make one, it’s easy, we promise!",
+  "make-sure-keycard": "Make sure the card you scanned is a Keycard.",
   "make-sure-no-camera-warning": "Make sure no camera or person can see this screen before revealing",
   "manage-connections": "Manage connections from within Application Connections",
   "manage-keys-and-storage": "Manage keys and storage",
@@ -1557,6 +1568,9 @@
   "messages-from-contacts-only-subtitle": "Only people you added as contacts can start a new chat with you or invite you to a group",
   "messages-gap-warning": "Some messages might be missing",
   "might-break": "Might break some ÐApps",
+  "migrate-key-pair-keycard": "Migrate profile key pair to Keycard",
+  "migrate-key-pair-keycard-default-key": "{{name}} is your default Status key pair. Migrating this key pair to Keycard will require you to use your Keycard to login to Status and to transact with the key pair’s derived accounts on all synced devices.\n\nKey pair will be removed from device and stored on Keycard.",
+  "migrate-key-pair-keycard-info": "Re-encrypting your data with your new Keycard login method may take some time, during which you won’t be able to use the app.",
   "migration-successful": "Migration successful",
   "migration-successful-text": "Account succesfully migrated to Keycard",
   "migrations-failed-content": "{{message}}\nschema version: initial {{initial-version}}, current {{current-version}}, last {{last-version}}\n\nA database error occured. Your funds and chat key are safe. Other data, like your chats and contacts, cannot be restored. \"{{erase-multiaccounts-data-button-text}}\" button, will remove all other data and allows you to access your funds and send messages.",
@@ -1794,6 +1808,7 @@
   "online-community-member": "Online",
   "online-now": "Online now",
   "only-mentions": "Only @mentions",
+  "oops-not-keycard": "Oops, this isn’t a Keycard",
   "oops-this-qr-does-not-contain-an-address": "Oops! This QR does not contain an address",
   "oops-wrong-password": "Oops, wrong password!",
   "oops-wrong-word": "Oops! Wrong word",
@@ -1824,6 +1839,7 @@
   "outgoing": "Outgoing",
   "outgoing-transaction": "Outgoing transaction",
   "overview": "Overview",
+  "own-keycard": "Already own a Keycard?",
   "own-your-crypto": "Own your crypto",
   "owner": "Owner",
   "page-camera-request-blocked": "camera requests blocked. To enable camera requests go to Settings",
@@ -2004,6 +2020,8 @@
   "re-encrypt-key": "Re-encrypt your keys",
   "read": "Read",
   "read-more": "Read more",
+  "ready-keycard": "Get your Keycard ready",
+  "ready-to-scan": "Ready to Scan",
   "rearrange-categories": "Rearrange Categories",
   "receive": "Receive",
   "receive-at-least": "Receive at least",
@@ -2058,6 +2076,7 @@
   "remove-network": "Remove network",
   "remove-nickname": "Remove nickname",
   "remove-nickname-toast": "You have removed {{secondary-name}}'s nickname",
+  "remove-phone-case": "Remove your phone case if you have one",
   "remove-private-key-address-desc": "The account will be removed from all of your synced devices. Make sure you have a backup of your key pair or recovery phrase.",
   "remove-profile-confirm-message": "All profile data will removed from device.",
   "remove-profile-message": "Remove profile from this device",
@@ -2166,9 +2185,11 @@
   "searching-for-activity": "Searching for activity...",
   "secret-keys-confirmation-text": "You will need them to continue to use your Keycard in case you ever lose your phone.",
   "secret-keys-confirmation-title": "Written the codes down?",
+  "secure-wallet-card": "A secure and private cold wallet in a card format",
   "security": "Security",
   "see-details": "See details",
   "see-it-again": "SEE IT AGAIN",
+  "see-keycard-ready": "Let’s see what’s on your Keycard. Ready?",
   "see-recovery-phrase-again": "See recovery phrase again",
   "see-sticker-set": "See the full sticker set",
   "see-suggestions": "See suggestions",
@@ -2248,6 +2269,7 @@
   "set-up-sync": "Set up sync",
   "settings": "Settings",
   "setup-group-chat": "Setup group chat",
+  "setup-keycard": "Setup Keycard",
   "setup-syncing": "Pair devices to sync",
   "share": "Share",
   "share-account": "Share account",
@@ -2472,6 +2494,7 @@
   "time-in-mins": "{{minutes}} min",
   "timeline": "Timeline",
   "tip-cap": "Tip cap",
+  "tips-scan-keycard": "Tips to scan your Keycard",
   "to": "to",
   "to-block": "Block",
   "to-capitalized": "To",
@@ -2626,6 +2649,7 @@
   "use-as-profile-picture": "Use as profile picture",
   "use-biometrics": "Use biometrics to fill in your password",
   "use-keycard": "Use Keycard",
+  "use-keycard-login-sign": "Use this Keycard to login and sign transactions",
   "use-keycard-subtitle": "Keys will be stored on your Keycard",
   "use-photo": "Use Photo",
   "use-recovery-phrase": "Use recovery phrase",
@@ -2770,6 +2794,7 @@
   "what-are-you-waiting-for": "What are you waiting for?",
   "what-changed": "What changed",
   "what-is-shared": "What is shared",
+  "what-to-do": "What you would like to do?",
   "what-we-will-receive": "What we will receive:",
   "what-we-wont-receive": "What we won't receive:",
   "whats-on-your-mind": "What’s on your mind…",
