fix(wallet): mercuryo on-ramp (#20962)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -1794,6 +1794,7 @@
   "on-keycard": "On Keycard",
   "on-status-tree": "On Status tree",
   "on-the-web": "On the web",
+  "on-uppercase": "On",
   "once-enabled-share-metadata": "Once enabled, links posted in the chat may share your metadata with the site",
   "one-day": "One day",
   "one-month": "One month",
@@ -2212,11 +2213,13 @@
   "select-another-account": "Select another account",
   "select-asset": "Select asset",
   "select-asset-on": "On",
+  "select-asset-to-buy": "Select asset to buy",
   "select-asset-to-pay": "Select asset to pay",
   "select-asset-to-receive": "Select asset to receive",
   "select-asset-via": "via",
   "select-chat": "Select chat to start messaging",
   "select-network": "Select network",
+  "select-network-for-buying": "Select network for buying",
   "select-networks": "Select networks",
   "select-new-location-for-keys": "Select a new location to save your private key(s)",
   "select-token-to-receive": "Select token to receive",
