Feature/keycard   create pin #21368 (#21413)

--- a/translations/en.json
+++ b/translations/en.json
@@ -540,6 +540,7 @@
   "create-channel-title": "New channel",
   "create-community": "Create a community",
   "create-group-chat": "Create group chat",
+  "create-keycard-pin": "Create Keycard PIN",
   "create-multiaccount": "Generate keys",
   "create-new-key": "Get new keys",
   "create-new-profile": "Create new profile",
@@ -1931,6 +1932,7 @@
   "pin-code": "6-digit passcode",
   "pin-limit-reached": "Pin limit reached. Unpin a previous message first.",
   "pin-mismatch": "Wrong passcode",
+  "pin-not-match": "PIN do not match",
   "pin-one-attempt": " one attempt ",
   "pin-one-attempt-blocked-after": "before your Keycard gets blocked",
   "pin-one-attempt-blocked-before": "Be careful, you have only",
@@ -2094,6 +2096,7 @@
   "removed-from-contacts": "Removed from contacts",
   "rename": "Rename",
   "rename-key-pair": "Rename key pair",
+  "repeat-keycard-pin": "Repeat Keycard PIN",
   "repeat-pin": "Repeat new 6-digit passcode",
   "repeat-puk": "Repeat new 12-digit PUK",
   "replied": "Replied",
