[#21396] chore: rename crypto buy phrases (#21404)

--- a/translations/en.json
+++ b/translations/en.json
@@ -51,9 +51,11 @@
   "add-address-to-watch": "Add address to watch",
   "add-address-to-watch-description": "Watch a public address or ENS name",
   "add-an-account": "Add an account",
+  "add-assets": "Add assets",
   "add-bootnode": "Add bootnode",
   "add-contact": "Add contact",
   "add-custom-token": "Add custom token",
+  "add-eth": "Add ETH",
   "add-favourite": "Add favourite",
   "add-mailserver": "Add Status node",
   "add-me-to-your-contacts": "Please add me to your contacts",
@@ -267,13 +269,11 @@
   "bug-report-too-short-description": "Description is too short",
   "build-yourself": "To use the app without these Terms of Use, you can build your own version",
   "buy": "Buy",
-  "buy-assets": "Buy assets",
   "buy-crypto": "Buy crypto",
   "buy-crypto-choose-a-service": "Choose a service you'd like to use to buy crypto",
   "buy-crypto-description": "Find a dapp to buy crypto now",
   "buy-crypto-leaving": "You are leaving Status and entering a third party website to complete your purchase",
   "buy-crypto-title": "Looks like your wallet is empty",
-  "buy-eth": "Buy ETH",
   "buy-ethereum": "Buy Ethereum",
   "buy-keycard": "Buy Keycard",
   "by-continuing-you-accept": "By continuing you accept our ",
@@ -2777,6 +2777,7 @@
   "watch-only": "Watch-only",
   "watched-account-removed": "Watched address has been removed",
   "watched-address": "Watched address",
+  "ways-to-buy-assets": "Ways to buy assets",
   "wc-brand-guide": "Guidance on using branding such as trademarks and logos",
   "wc-disclaimer": "Disclaimers (including third party providers), warranties, and legal releases",
   "wc-dispute": "Dispute resolution provisions",
