--- a/translations/en.json
+++ b/translations/en.json
@@ -139,12 +139,12 @@
   "apply": "Apply",
   "apply-changes": "Apply changes",
   "approve": "Approve",
-  "approve-amount-symbol": "Approve {{amount}} {{symbol}}",
+  "approve-amount-symbol": "Approve {{token-amount}} {{token-symbol}}",
   "approve-limit": "Approve limit",
   "approve-token": "Approve token",
   "approve-token-contract-desc": "Approving a token with a contract allows it to spend your token balance. If you feel that a project is untrustworthy, don’t approve the token with them, or approve only the amount you will use with them.",
-  "approved-amount-symbol": "Approved {{amount}} {{symbol}}",
-  "approving-amount-symbol": "Approving {{amount}} {{symbol}}...",
+  "approved-amount-symbol": "Approved {{token-amount}} {{token-symbol}}",
+  "approving-amount-symbol": "Approving {{token-amount}} {{token-symbol}}...",
   "apr": "Apr",
   "arbiscan": "Arbiscan",
   "arbitrum": "Arbitrum",
@@ -2376,8 +2376,8 @@
   "specify-symbol": "Specify a symbol",
   "spender-contract": "Spender contract",
   "spending-cap": "Spending cap",
-  "spending-cap-failed": "Spending cap failed: {{amount}} {{token-symbol}} for {{provider-name}} in {{account-name}}",
-  "spending-cap-set": "Spending cap set: {{amount}} {{token-symbol}} for {{provider-name}} in {{account-name}}",
+  "spending-cap-failed": "Spending cap failed: {{token-amount}} {{token-symbol}} for {{provider-name}} in {{account-name}}",
+  "spending-cap-set": "Spending cap set: {{token-amount}} {{token-symbol}} for {{provider-name}} in {{account-name}}",
   "start-chat": "Start chat",
   "start-conversation": "Start conversation",
   "start-group-chat": "Start group chat",
