fix Group Admin has no option to Edit a Group Chat (#21457)

--- a/translations/en.json
+++ b/translations/en.json
@@ -2646,6 +2646,7 @@
   "untrustworthy": "Untrustworthy",
   "update": "Update",
   "update-account-name": "Update account name",
+  "update-group-chat": "Update group chat",
   "update-nickname-title": "Update nickname",
   "update-to-listen-audio": "Update to latest version to listen to an audio message here!",
   "update-to-see-image": "Update to latest version to see a nice image here!",
