feat(onboarding): Present Terms to users upgrading from v1 or those who need to accept updated Terms (#21487)
Cherry-pick https://github.com/status-im/status-mobile/commit/d45eb5ec20ae7757cd99554920e466eabac0bfb1.

Fixes https://github.com/status-im/status-mobile/issues/21113

Related status-go PR: https://github.com/status-im/status-go/pull/5977

--- a/translations/en.json
+++ b/translations/en.json
@@ -1002,6 +1002,7 @@
   "expand-all": "Expand all",
   "experienced-web3": "Experienced in Web3?",
   "explore-the-decentralized-web": "Explore and interact with the decentralized web",
+  "explore-the-new-status": "Explore the new Status",
   "export-account": "Export account",
   "export-key": "Export private key",
   "external-link": "External link",
