--- a/translations/en.json
+++ b/translations/en.json
@@ -784,6 +784,7 @@
   "device-syncing": "Device syncing",
   "devices": "Devices",
   "devices-count": "{{number}} devices",
+  "different-keycard": "It’s a different Keycard",
   "disable": "disable",
   "disable-all": "Disable all",
   "disable-later-in-settings": "You can disable this later in Settings",
@@ -1033,6 +1034,9 @@
   "export-key": "Export private key",
   "external-link": "External link",
   "external-storage-denied": "Access to external storage is denied",
+  "factory-reset": "Factory reset",
+  "factory-reset-keycard": "Factory reset this Keycard",
+  "factory-reset-warning": "Please ensure you have a backup of your recovery phrase before proceeding with the factory reset. If you want to switch to password authentication instead of Keycard, remove the profile from the device and log in with your recovery phrase.",
   "failed": "Failed",
   "failed-on": "Failed on",
   "failed-to-fetch-community": "Failed to fetch community",
@@ -1354,6 +1358,7 @@
   "key-name-error-taken": "Key pair name already in use",
   "key-name-error-too-short": "Key pair name must be at least {{count}} characters",
   "key-on-device": "Private key is saved on this device",
+  "key-pair-erased": "Key pair will be erased from Keycard",
   "key-pair-imported-successfully": "{{name}} key pair imported successfully",
   "key-pair-migrated-successfully": "Profile key pair successfully migrated",
   "key-pair-name-updated": "Key pair name updated",
@@ -1377,6 +1382,7 @@
   "keycard-desc": "Own a Keycard? Store your keys on it; you’ll need it for transactions",
   "keycard-dont-ask-card": "Don't ask for card to sign in",
   "keycard-empty": "Keycard is empty",
+  "keycard-empty-ready": "Keycard is empty and ready to be used",
   "keycard-enter-new-passcode": "Enter new passcode {{step}}/2",
   "keycard-error-description": "Connect the card again to continue",
   "keycard-error-title": "Connection lost",
@@ -1435,7 +1441,9 @@
   "keycard-redeem-title": "Redeem to",
   "keycard-redeem-tx": "Redeem assets",
   "keycard-redeem-tx-desc": "Tap the card to sign and receive assets",
+  "keycard-reset-failed": "Failed to reset Keycard",
   "keycard-reset-passcode": "Reset passcode",
+  "keycard-reset-success": "Keycard has been reset",
   "keycard-success-description": "You may remove the card now",
   "keycard-success-title": "Success",
   "keycard-unauthorized-operation": "You're unauthorized to perform this operation.\n Please tap valid card and try again.",
@@ -2157,6 +2165,7 @@
   "remove-from-contacts-text": "By removing a user from your contact list you do not hide your wallet address from them",
   "remove-group": "Remove group",
   "remove-key-pair-and-derived-accounts": "Remove key pair and derived accounts",
+  "remove-keycard-content": "Remove all content from this Keycard",
   "remove-network": "Remove network",
   "remove-nickname": "Remove nickname",
   "remove-nickname-toast": "You have removed {{secondary-name}}'s nickname",
@@ -2249,9 +2258,11 @@
   "scan-an-address-qr-code": "Scan an address QR code",
   "scan-key-pairs-qr-code": "Scan key pairs QR code",
   "scan-keycard": "Scan Keycard",
+  "scan-keycard-actions": "Scan Keycard to see available actions",
   "scan-or-enter-a-sync-code": "Scan or enter a sync code",
   "scan-or-enter-sync-code": "Scan or enter sync code",
   "scan-or-enter-sync-code-seen-on-this-device": "Scan or enter sync code seen on this device",
+  "scan-previous-keycard": "Please scan Keycard you previously scanned",
   "scan-qr": "Scan QR",
   "scan-qr-code": "Scan QR code",
   "scan-sync-code": "Scan Sync Code",
