feat: integrate base chain (#21876)
Signed-off-by: Brian Sztamfater <brian@status.im>

--- a/translations/en.json
+++ b/translations/en.json
@@ -195,6 +195,7 @@
   "backup-through-waku": "Backup through waku",
   "bad-fees-description": "Your priority fee is below our suggested parameters.",
   "balance": "Balance",
+  "base": "Base",
   "be-safe-with-secure-cold-wallet": "Be safe with secure cold wallet",
   "begin-set-up": "Begin setup",
   "below-base-fee": "max fee below base fee",
@@ -2390,6 +2391,7 @@
   "share-invite-link": "Share an invite link",
   "share-link": "Share link",
   "share-link-to-arb": "Share link to Arbiscan",
+  "share-link-to-base": "Share link to Basescan",
   "share-link-to-eth": "Share link to Etherscan",
   "share-link-to-oeth": "Share link to Optimism Explorer",
   "share-logs": "Share logs",
@@ -2818,6 +2820,7 @@
   "view-gitcoin": "View in Gitcoin",
   "view-members": "View members",
   "view-on-arb": "View on Arbiscan",
+  "view-on-base": "View on Basescan",
   "view-on-eth": "View on Etherscan",
   "view-on-oeth": "View on Optimism Explorer",
   "view-on-opensea": "View on OpenSea",
