Keycard - Import a seed phrase into a new Keycard (#21947)

--- a/translations/en.json
+++ b/translations/en.json
@@ -61,7 +61,6 @@
   "add-custom-token": "Add custom token",
   "add-eth": "Add ETH",
   "add-favourite": "Add favourite",
-  "add-key-pair-desktop": "To add existing key pair to the Keycard please use Status Desktop. If you'd like this feature on mobile, feel free to upvote them.",
   "add-mailserver": "Add Status node",
   "add-me-to-your-contacts": "Please add me to your contacts",
   "add-members": "Add members",
@@ -1227,6 +1226,7 @@
   "import-private-key": "Import private key",
   "import-private-key-info": "New addresses cannot be derived from an account imported from a private key. Import using a seed phrase if you wish to derive addresses.",
   "import-profile-key-pair": "Import profile key pair",
+  "import-recovery-phrase-to-keycard": "Import recovery phrase to Keycard",
   "import-to-use-derived-accounts": "Import to use derived accounts",
   "import-using-phrase": "Import using recovery phrase",
   "in": "in",
@@ -2519,6 +2519,7 @@
   "sticker-market": "Sticker market",
   "storage": "Storage",
   "store-confirmations": "Store confirmations",
+  "store-key-pair-on-keycard": "Store your existing key pair on Keycard",
   "store-your-asets-on-keycard": "Store your assets on Keycard",
   "strength-divider-okay-label": "Okay",
   "strength-divider-strong-label": "Strong",
