feat(onboarding): ask user to update their profile (#21862)
* Add `buttons-style` prop to bottom actions to allow same button dimensions

* Make events to update a profile more generic

* Fix tests

* Add modal screen to update the profile

* Add introduce yourself modal

* Ask user to update their profile before sending a message or contact request

* Fix color picker selected styles

* Remove some `:f>` now unnecessary

* No longer shows the modal if the user manually updates their profile

--- a/translations/en.json
+++ b/translations/en.json
@@ -59,6 +59,7 @@
   "add-bootnode": "Add bootnode",
   "add-contact": "Add contact",
   "add-custom-token": "Add custom token",
+  "add-display-name-and-picture": "Add an optional display name and profile picture so others can easily recognize you",
   "add-eth": "Add ETH",
   "add-favourite": "Add favourite",
   "add-mailserver": "Add Status node",
@@ -1348,6 +1349,7 @@
   "joined-group-chat-description": "You've joined {{group-name}} from invitation by {{username}}",
   "jul": "Jul",
   "jun": "Jun",
+  "just-introduce-yourself": "Introduce yourself",
   "K": "K",
   "keep-card-steady": "Keep the card steady under the phone",
   "keep-key": "KeepKey",
