[#21930] Keycard - Back up keycard (#21990)

--- a/translations/en.json
+++ b/translations/en.json
@@ -184,7 +184,11 @@
   "back-up-your-seed-phrase": "Backup your recovery phrase",
   "backing-up": "Backing up...",
   "backup-disabled": "Disabled",
+  "backup-empty-keycard-only": "You can only back up to an empty Keycard.",
   "backup-enabled": "Enabled",
+  "backup-keycard": "Backup Keycard",
+  "backup-keycard-created": "Backup Keycard successfully created",
+  "backup-keycard-instructions": "You’ll need an empty Keycard to create backup. You’ll be able to create a different PIN for backup Keycard. It might make sense to mark your Keycards, so you don’t mix them up.",
   "backup-recovery-phrase": "Backup recovery phrase",
   "backup-recovery-phrase-description": "Save in a secure place that only you control, these 12 words give access to all of your funds.",
   "backup-settings": "Backup settings",
@@ -547,6 +551,8 @@
   "create-a-pin": "Create a 6-digit passcode",
   "create-a-puk": "Create a 12-digit PUK",
   "create-account": "Create account",
+  "create-backup-keycard": "Create backup Keycard",
+  "create-backup-profile-keycard": "Create backup for your profile Keycard",
   "create-category": "Create category",
   "create-channel": "Create a channel",
   "create-channel-title": "New channel",
@@ -1561,6 +1567,7 @@
   "make-sure-keycard": "Make sure the card you scanned is a Keycard.",
   "make-sure-no-camera-warning": "Make sure no camera or person can see this screen before revealing",
   "manage-connections": "Manage connections from within Application Connections",
+  "manage-keycard": "Manage Keycard",
   "manage-keys-and-storage": "Manage keys and storage",
   "manage-members": "Manage members",
   "manage-tokens": "Manage tokens",
@@ -2260,6 +2267,7 @@
   "say-hi": "Say hi",
   "scan-an-account-qr-code": "Scan an account QR code",
   "scan-an-address-qr-code": "Scan an address QR code",
+  "scan-empty-keycard": "Scan empty Keycard",
   "scan-key-pairs-qr-code": "Scan key pairs QR code",
   "scan-keycard": "Scan Keycard",
   "scan-keycard-actions": "Scan Keycard to see available actions",
@@ -2377,6 +2385,7 @@
   "settings": "Settings",
   "setup-group-chat": "Setup group chat",
   "setup-keycard": "Setup Keycard",
+  "setup-keycard-description": "Set up your Keycard to log in, sign transactions, create backups and much more.",
   "setup-syncing": "Pair devices to sync",
   "share": "Share",
   "share-account": "Share account",
@@ -2778,6 +2787,7 @@
   "use-an-empty-keycard": "Use an empty Keycard",
   "use-an-empty-keycard-subtitle": "Store your new profile keys on Keycard",
   "use-as-profile-picture": "Use as profile picture",
+  "use-backup-keycard": "Use as backup Keycard",
   "use-biometrics": "Use biometrics to fill in your password",
   "use-keycard": "Use Keycard",
   "use-keycard-for-status": "From now on, use this Keycard to login to Status and transact with derived accounts on all synced devices. To start using it, logout and log back in with this Keycard.",
