feat(wallet)_: Remove EIP-3770 address format (#21995)
This commit:

- removes EIP-3770 address format (with chain prefix) from the UI and displays/uses only the address
- removes editing of preferred networks for an account and saved address
- copy/paste functions will remove the chain prefix from the address (if any)
- adds base chain explorer links to account and saved address


Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2822,6 +2822,7 @@
   "via-card-or-bank": "Via card or bank",
   "view": "View",
   "view-address-on-arbiscan": "View address on Arbiscan",
+  "view-address-on-basescan": "View address on Basescan",
   "view-address-on-etherscan": "View address on Etherscan",
   "view-address-on-optimistic": "View address on Optimistic",
   "view-channel-members-and-details": "View channel members and details",
