feat(messenger): Add option to copy active message ID (#22018)
Add option to copy message ID when long pressing on a chat message. Similar to
how it's implemented in the desktop client, the option is only visible if the
user enables the DEBUG log level.

Fixes https://github.com/status-im/status-mobile/issues/21984

--- a/translations/en.json
+++ b/translations/en.json
@@ -539,6 +539,7 @@
   "copy-address": "Copy address",
   "copy-all-details": "Copy all details",
   "copy-info": "Copy info",
+  "copy-message-id": "Copy message ID",
   "copy-qr": "Copy code",
   "copy-text": "Copy text",
   "copy-to-clipboard": "Copy",
