Changing the PIN of the Keycard (#22008)

--- a/translations/en.json
+++ b/translations/en.json
@@ -335,6 +335,9 @@
   "change-password-old-password-placeholder": "Enter current password",
   "change-password-repeat-password-placeholder": "Repeat new password",
   "change-pin": "Change 6-digit passcode",
+  "change-pin-keycard": "Change PIN",
+  "change-pin-keycard-description": "Use different PIN for this Keycard",
+  "change-pin-keycard-message": "It’s very important that you will not forget new PIN. Status is unable to restore PIN. If you forget it, Keycard will be blocked and you will need to restore it via recovery phrase or PUK.",
   "change-puk": "Change 12-digit PUK",
   "change-testnet-mode-logout-info": "You’ll be logged out of the app",
   "change-tip": "Change tip",
@@ -562,6 +565,7 @@
   "create-keycard-pin": "Create Keycard PIN",
   "create-multiaccount": "Generate keys",
   "create-new-key": "Get new keys",
+  "create-new-keycard-pin": "Create new Keycard PIN",
   "create-new-profile": "Create new profile",
   "create-pin": "Create 6-digit passcode",
   "create-pin-description": "You'll need your card + this 6-digit passcode to unlock Status and to confirm transactions",
@@ -814,6 +818,7 @@
   "do-not-cheat": "Don't try to cheat",
   "do-not-cheat-description": "These 12 words give access to all of your funds so it is important that you write them in the correct order, take it seriously.",
   "do-not-quit": "Do not quit the application or turn off your device. Doing so will lead to data corruption, loss of your Status profile and the inability to use Status.",
+  "do-not-quit-the-application": "Do not quit the application",
   "do-not-share": "Do not share",
   "documents": "Documents",
   "done": "Done",
@@ -994,6 +999,7 @@
   "enter-channel": "Enter channel",
   "enter-chat-key": "Enter chat key or scan a QR",
   "enter-contact-code": "ENS (vitalik94) or chat key (0x04…)",
+  "enter-current-keycard-pin": "Enter current Keycard PIN",
   "enter-eth": "Enter any ETH address or ENS name.",
   "enter-keycard-pin": "Enter Keycard PIN",
   "enter-pair-code": "Enter your pairing code",
@@ -1435,6 +1441,10 @@
   "keycard-onboarding-start-step3": "Back up the seed phrase",
   "keycard-onboarding-start-step3-text": "Around 1 minute. Also a piece of paper and a pencil are necessary",
   "keycard-onboarding-start-text": "And maintain card to phone contact\n during the setup. The setup will take around 4 minutes",
+  "keycard-pin-change-failed": "Failed to change Keycard PIN",
+  "keycard-pin-change-failed-description": "Keycard PIN was not updated",
+  "keycard-pin-changed": "Keycard PIN changed successfully",
+  "keycard-pin-changed-description": "Now you required to use new PIN for this Keycard",
   "keycard-processing-description": "Try keeping the card still",
   "keycard-processing-title": "Processing...",
   "keycard-recover": "lost or frozen card?",
@@ -2122,6 +2132,7 @@
   "read-more": "Read more",
   "ready-add-keypair-keycard": "Ready to add key pair to Keycard",
   "ready-keycard": "Get your Keycard ready",
+  "ready-to-change-pin": "Ready to change PIN",
   "ready-to-migrate-key-pair": "Ready to migrate profile key pair to the Keycard",
   "ready-to-scan": "Ready to Scan",
   "rearrange-categories": "Rearrange Categories",
@@ -2197,6 +2208,7 @@
   "rename": "Rename",
   "rename-key-pair": "Rename key pair",
   "repeat-keycard-pin": "Repeat Keycard PIN",
+  "repeat-new-keycard-pin": "Repeat new Keycard PIN",
   "repeat-pin": "Repeat new 6-digit passcode",
   "repeat-puk": "Repeat new 12-digit PUK",
   "replied": "Replied",
@@ -2953,7 +2965,7 @@
   "what-to-do": "What you would like to do?",
   "what-we-will-receive": "What we will receive:",
   "what-we-wont-receive": "What we won't receive:",
-  "what-you-can-do": "What you can do:",
+  "what-you-can-do": "What you can do?",
   "whats-on-your-mind": "What’s on your mind…",
   "which-connection-to-use": "Which connection to use for syncing?",
   "who-are-you-looking-for": "Who are you looking for ?",
