[#21993] Keycard - Unlock Keycard (#22030)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1468,6 +1468,7 @@
   "keycard-success-description": "You may remove the card now",
   "keycard-success-title": "Success",
   "keycard-unauthorized-operation": "You're unauthorized to perform this operation.\n Please tap valid card and try again.",
+  "keycard-unblocked": "Keycard unblocked",
   "keycard-upsell-subtitle": "Enhanced security and convenience",
   "keypair-name": "Key pair name",
   "keypair-name-description": "Name key pair for your own personal reference",
@@ -2136,6 +2137,7 @@
   "ready-to-change-pin": "Ready to change PIN",
   "ready-to-migrate-key-pair": "Ready to migrate profile key pair to the Keycard",
   "ready-to-scan": "Ready to Scan",
+  "ready-to-unblock-keycard": "Ready to unblock Keycard",
   "rearrange-categories": "Rearrange Categories",
   "receive": "Receive",
   "receive-at-least": "Receive at least",
@@ -2748,6 +2750,9 @@
   "unable-to-send-messages": "Unable to send and receive messages",
   "unblock": "Unblock",
   "unblock-contact": "Unblock this user",
+  "unblock-keycard": "Unblock Keycard",
+  "unblock-keycard-instructions": "You’ll be asked for recovery phrase. After unblocking you’ll be able to continue using Keycard to log in to Status and sign transactions on key pair derived accounts.",
+  "unblock-keycard-recovery": "Unblock Keycard with recovery phrase",
   "unblocking-a-user-message": "After unblocking {{username}}, you will be able to connect with them as a contact and see their messages in group chats and communities.",
   "understanding-bonder-fees-description": "The bridged amount can be lower than the amount you send due to Bonder fees. These fees cover the cost of providing liquidity and managing risks associated with your transfer. The fee ranges from 0.05% to 0.30%, depending on factors such as transaction volume and route specifics.",
   "understanding-bonder-fees-title": "Understanding Bonder fees",
@@ -2975,6 +2980,7 @@
   "will-be-shared-from-all-profiles": "Will be shared from all profiles on device",
   "will-be-shared-from-the-current-profile": "Will be shared from the current profile",
   "with-full-encryption": "With full metadata privacy and e2e encryption",
+  "with-recovery-phrase": "With recovery phrase",
   "word-count": "Word count",
   "word-n": "Word #{{number}}",
   "word-n-description": "In order to check if you have backed up your seed phrase correctly, enter the word #{{number}} above.",
