fix: update text for keycard (#22043)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1663,7 +1663,7 @@
   "might-break": "Might break some ÐApps",
   "migrate-key-pair-authorise": "To migrate profile key pair to Keycard you need to authorise with profile password.",
   "migrate-key-pair-keycard": "Migrate profile key pair to Keycard",
-  "migrate-key-pair-keycard-default-key": "{{name}} is your default Status key pair. Migrating this key pair to Keycard will require you to use your Keycard to login to Status and to transact with the key pair’s derived accounts on all synced devices.\n\nKey pair will be removed from device and stored on Keycard.",
+  "migrate-key-pair-keycard-default-key": "{{name}} is your default Status key pair. Migrating this key pair to Keycard will require you to use your Keycard to login to Status and to transact with the key pair’s derived accounts.\n\nKey pair will be removed from device and stored on Keycard.",
   "migrate-key-pair-keycard-info": "Re-encrypting your data with your new Keycard login method may take some time, during which you won’t be able to use the app.",
   "migration-successful": "Migration successful",
   "migration-successful-text": "Account succesfully migrated to Keycard",
@@ -2809,9 +2809,9 @@
   "use-backup-keycard": "Use as backup Keycard",
   "use-biometrics": "Use biometrics to fill in your password",
   "use-keycard": "Use Keycard",
-  "use-keycard-for-status": "From now on, use this Keycard to login to Status and transact with derived accounts on all synced devices. To start using it, logout and log back in with this Keycard.",
+  "use-keycard-for-status": "From now on, use this Keycard to login to Status and transact with derived accounts. To start using it, logout and log back in with this Keycard.",
   "use-keycard-instead-password": "To use Keycard instead of password",
-  "use-keycard-login-sign": "Use this Keycard to login and sign transactions",
+  "use-keycard-login-sign": "Use this Keycard to sign in and authorize transactions",
   "use-keycard-subtitle": "Keys will be stored on your Keycard",
   "use-photo": "Use Photo",
   "use-recovery-phrase": "Use recovery phrase",
