fix Keycard UI issues (#22075)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1388,6 +1388,7 @@
   "keycard-backup-success-body": "Backup card created successfully. You can now use it with your account just like the primary card.",
   "keycard-backup-success-title": "Backup successful",
   "keycard-blocked": "Keycard has been blocked.\nYou need to reset card to continue using it.",
+  "keycard-blocked": "Keycard is blocked",
   "keycard-can-use-with-new-passcode": "You can use this card with your new passcode",
   "keycard-cancel-setup-text": "This will cancel keycard setup. It's highly recommended to finish the setup in order to use keycard. Do you really want to cancel?",
   "keycard-cancel-setup-title": "Dangerous operation",
@@ -1417,7 +1418,6 @@
   "keycard-is-frozen-factory-reset": "Reset with mnemonic",
   "keycard-is-frozen-reset": "Reset with PUK",
   "keycard-is-frozen-title": "Keycard is frozen",
-  "keycard-locked": "Keycard is locked",
   "keycard-migration-failed-instruction-1": "Try logging out and logging back in with Keycard; everything might work fine.",
   "keycard-migration-failed-instruction-2": "If the key pair hasn’t migrated to Keycard, remove your profile, and recover it using your recovery phrase.",
   "keycard-not-empty": "Keycard is not empty",
