--- a/translations/en.json
+++ b/translations/en.json
@@ -2134,6 +2134,7 @@
   "ready-add-keypair-keycard-documentation": "When you create a Status profile, the Status app generates cryptographic keys for your profile authentication and authorization.\n\nYour Keycard stores the cryptographic keys for your Status profile, permanently offline and isolated from the internet, and also secures your Wallet accounts.",
   "ready-keycard": "Get your Keycard ready",
   "ready-to-change-pin": "Ready to change PIN",
+  "ready-to-import-keypair-keycard": "Ready to import key pair to the Keycard",
   "ready-to-migrate-key-pair": "Ready to migrate profile key pair to the Keycard",
   "ready-to-scan": "Ready to Scan",
   "ready-to-unblock-keycard": "Ready to unblock Keycard",
