Update keycard Illustrations (#22171)

--- a/translations/en.json
+++ b/translations/en.json
@@ -796,7 +796,7 @@
   "device-syncing": "Device syncing",
   "devices": "Devices",
   "devices-count": "{{number}} devices",
-  "different-keycard": "It’s a different Keycard",
+  "different-keycard": "This is a different Keycard",
   "disable": "disable",
   "disable-all": "Disable all",
   "disable-later-in-settings": "You can disable this later in Settings",
@@ -1468,6 +1468,7 @@
   "keycard-success-title": "Success",
   "keycard-unauthorized-operation": "You're unauthorized to perform this operation.\n Please tap valid card and try again.",
   "keycard-unblocked": "Keycard unblocked",
+  "keycard-unblocked-description": "You’ll need this Keycard to login to Status and transact with derived accounts.",
   "keycard-upsell-subtitle": "Enhanced security and convenience",
   "keypair-name": "Key pair name",
   "keypair-name-description": "Name key pair for your own personal reference",
